--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,6 +9,7 @@ services:
     ports:
       - "5432:5432"
 
+
   webserver:
     user: root
     build:
@@ -25,9 +26,7 @@ services:
       - FERNET_KEY=jsDPRErfv8Z_eVTnGfF8ywd19j4pyqE3NpdUBA_oRTo=
     volumes:
       - ./dags:/usr/local/airflow/dags
-      - ./scrapes:/usr/local/airflow/scrapes
-      # Uncomment to include custom plugins
-      # - ./plugins:/usr/local/airflow/plugins
+      - ./data:/usr/local/airflow/data
     ports:
       - "8080:8080"
     command: webserver
