--- a/.gitignore
+++ b/.gitignore
@@ -127,5 +127,8 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
-/data/
-/dags/jail_scraper/
+/airflow/data/
+/airflow/dags/jail_scraper/
+/airflow/logs/
+/.idea
+*/.idea
